--- a/prueba.html
+++ b/prueba.html
@@ -1,110 +1,40 @@
-{% extends "inventario/base.html" %}
-{% load static %}
-{% load render_table from django_tables2 %}
-{% load querystring from django_tables2 %}
-{% block title %}Products{% endblock title %}
-
-{% block content %}
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-12">
-            <div class="page-title-box">
-                <div class="page-title-right">
-                    <ol class="breadcrumb m-0">
-                        <li class="breadcrumb-item"><a href="javascript: void(0);">Inventario</a></li>
-                        <li class="breadcrumb-item active">Productos</li>
-                    </ol>
-                </div>
-                <h3 class="page-title">Productos</h3>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12">
-            <div class="card">
-                <div class="card-body">
-                    <div class="row mb-2">
-                        <div class="col-sm-5">
-                            <a href="javascript:void(0);" class="btn btn-danger mb-2"><i
-                                    class="mdi mdi-plus-circle me-2"></i> Agregar productos</a>
-                        </div>
-                        <div class="col-sm-7">
-                            <div class="text-sm-end">
-                                <button type="button" class="btn btn-success mb-2 me-1"><i
-                                        class="mdi mdi-cog-outline"></i></button>
-                                <button type="button" class="btn btn-light mb-2 me-1">Importar</button>
-                                <a class="btn btn-light mb-2" href="{% querystring '_export'='xlsx' %}">
-                                    <i class="fa-solid fa-file-excel"></i> Exportar a excel
-                                </a>
+                        <form id="formUnidad" class="needs-validation">
+                            {% csrf_token %}
+                            <input type="hidden" name="producto_id" id="producto_id" value="">
+                            <div class="modal-header py-3 px-4 border-bottom-0">
+                                <h5 class="modal-title" id="modalTitle">Agregar un producto</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
                             </div>
-                        </div>
-                    </div>
-
-                    <div class="table-responsive">
-                        <table class="table table-centered w-100 dt-responsive nowrap" id="products-datatable">
-                            <thead class="table-light">
-                                <tr>
-                                    <th class="all" style="width: 20px;">
-                                        <div class="form-check">
-                                            <input type="checkbox" class="form-check-input" id="customCheck1">
-                                            <label class="form-check-label" for="customCheck1">&nbsp;</label>
+                            <div class="modal-body px-4 pb-4 pt-0">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="mb-3">
+                                            <div class="row">
+                                                <div class="col-12">
+                                                    <label class="form-label">Foto del producto</label>
+                                                </div>
+                                                <div class="col-12">
+                                                    <img id="vista_previa" src=""
+                                                        class="mx-auto d-block"
+                                                        style="max-width: 100px; margin-bottom: 10px; display: none;" />
+                                                    <input type="file" id="foto" name="foto" accept="image/*"
+                                                        class="form-control rounded mx-auto d-block"
+                                                        style="max-width: 300px;">
+                                                </div>
+                                            </div>
                                         </div>
-                                    </th>
-                                    <th class="all">Nombre</th>
-                                    <th>Categoría</th>
-                                    <th>Precio</th>
-                                    <th>Stock</th>
-                                    <th>Unidad</th>
-                                    <th style="width: 85px;">Acciones</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for producto in productos %}
-                                <tr>
-                                    <td>
-                                        <div class="form-check">
-                                            <input type="checkbox" class="form-check-input" id="customCheck2">
-                                            <label class="form-check-label" for="customCheck2">&nbsp;</label>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <button type="button" class="btn btn-danger"
+                                                id="cancelarProducto">Cancelar</button>
                                         </div>
-                                    </td>
-                                    <td>
-                                        <img src="{{ producto.foto.url }}" alt="contact-img" title="contact-img"
-                                            class="rounded me-3" height="48" />
-                                        <p class="m-0 d-inline-block align-middle font-16">
-                                            <a href="#" class="text-body">{{ producto.nombre }}</a>
-                                            <br />
-                                        </p>
-                                    </td>
-                                    <td>
-                                        {{ producto.categoria }}
-                                    </td>
-                                    <td>
-                                        {{ producto.precio }}
-                                    </td>
-                                    <td>
-                                        {{ producto.stock }}
-                                    </td>
+                                        <div class="col-6 text-end">
+                                            <button type="submit" class="btn btn-success"
+                                                id="btn-save-event">Guardar</button>
+                                        </div>
+                                    </div>
 
-                                    <td>
-                                        {{ producto.unidad }}
-                                    </td>
-
-                                    <td class="table-action">
-                                        <a href="javascript:void(0);" class="action-icon"> <i
-                                                class="mdi mdi-eye"></i></a>
-                                        <a href="javascript:void(0);" class="action-icon"> <i
-                                                class="mdi mdi-square-edit-outline"></i></a>
-                                        <a href="javascript:void(0);" class="action-icon"> <i
-                                                class="mdi mdi-delete"></i></a>
-                                    </td>
-                                </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-{% endblock content %}
+                                </div>
+                        </form>
