--- a/prueba.html
+++ b/prueba.html
@@ -104,9 +104,9 @@
               <div class="d-flex justify-content-end text-end mb-1">
                 <div class="w-100">
                   <div class="d-flex flex-column align-items-end">
-                    <div class="bg-primary text-white p-2 px-3 rounded-2">Escr9be</div>
+                    <div class="bg-primary text-white p-2 px-3 rounded-2">Escribe aqui el mensaje</div>
                     <div class="d-flex my-2">
-                      <div class="small text-secondary">6:20 AM</div>
+                      <div class="small text-secondary">6:20 AM (actualiza la hora en la que se hace click el mensaje)</div>
                       <div class="small ms-2"><i class="fa-solid fa-check-double text-info"></i></div>
                     </div>
                   </div>
